@@ -52,10 +52,13 @@ static char const rcsid[] = "$Id$";
 static	jmp_buf	env;		/* setjmp/longjmp buffer */
 static	int	prevchar;	/* previous, ungotten character */
 
+/* Internal prototypes: */
+static	RETSIGTYPE	catchint(int sig);
+
 /* catch the interrupt signal */
 
 /*ARGSUSED*/
-RETSIGTYPE
+static RETSIGTYPE
 catchint(int sig)
 {
  	(void) sig;		/* 'use' it, to avoid a warning */
@@ -76,7 +79,7 @@ myungetch(int c)
 int
 mygetch(void)
 {
-	RETSIGTYPE	(*savesig)();		/* old value of signal */
+	RETSIGTYPE	(*savesig)(int); /* old value of signal */
 	int	c;
 
 	/* change an interrupt signal to a break key character */
